# RAG-based-Learning-Assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  flashcardv1.md  requirements.txt
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_fix_chunk_embedding_dimension.py  0003_add_flashcards.py  0003_drop_chunk_embedding_column.py
backend/app/: config.py  main.py
backend/app/db/: models.py  session.py
backend/app/rag/: chunker.py  embedder.py  flashcards.py  generator.py  ingest.py  metrics.py  parser.py  prompts.py  reranker.py  retriever.py  vector_store.py
backend/app/schemas/: chat.py  document.py  flashcard.py  study.py
backend/evaluation/: MODULE_MAP.md  README.md  artifacts.py  cli.py  config.py  experiment.py  export.py  local_metrics.py  metrics.py  pipeline.py  rate_limiter.py  schemas.py
backend/evaluation/configs/: default_comparison.yaml
backend/evaluation/data/: test_qa.json
backend/evaluation/datasets/: asqa.py  base.py  hotpotqa.py  natural_questions.py  pdf_qa.py  popqa.py  pubhealth.py  qa_generator.py
backend/evaluation/results/: hotpotqa_5k_rerankTrue_report.json  hotpotqa_5k_rerankTrue_samples.csv  pdf_qa_5k_rerankTrue_report.json  pdf_qa_5k_rerankTrue_samples.csv
backend/tests/: test_chat_prompt.py  test_chunker.py  test_documents.py  test_flashcard_pipeline.py  test_flashcards.py  test_health.py  test_rag_metrics.py  test_schema.py  test_sessions.py  test_study.py  test_vector_store.py
backend/tests/evaluation/: test_artifacts.py  (+9 more)
(+59 files in other folders)
