[project]
name = "aio-backend"
version = "0.1.0"
description = "AIO FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "asyncpg>=0.30.0",
  "fastapi[standard]>=0.115.0",
  "google-genai>=1.0.0",
  "pgvector>=0.3.6",
  "pydantic-settings>=2.9.0",
  "pymupdf>=1.24.0",
  "sentence-transformers>=5.0.0",
  "sqlalchemy[asyncio]>=2.0.40",
]

[dependency-groups]
dev = [
  "black>=25.1.0",
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = ["."]
